--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,43 @@
+# Dependencies
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+
+# Environment variables
 .env
-.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
 *.log
+logs/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Build outputs
+dist/
+build/
+coverage/
+
+# Uploads and temp files
+uploads/
+temp/
+tmp/
+
+# Cache
+.cache/
+.eslintcache
+.prettierchache
