--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ NODE_ENV=development
 # Database Configuration
 MONGODB_URI=mongodb://localhost:27017/ai-craft-recognition
 
+# AI Service Configuration
+AI_SERVICE_URL=http://localhost:5001
+
 # API Keys (Add your keys here)
 # OPENAI_API_KEY=your_openai_api_key_here
 # GEMINI_API_KEY=your_gemini_api_key_here
