--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,11 @@ MONGODB_URI=mongodb://localhost:27017/ai-craft-recognition
 # AI Service Configuration
 AI_SERVICE_URL=http://localhost:5001
 
+# Speech-to-Text Configuration
+STT_PROVIDER=whisper
+OPENAI_API_KEY=your_openai_api_key_here
+# GOOGLE_STT_API_KEY=your_google_api_key_here
+
 # API Keys (Add your keys here)
 # OPENAI_API_KEY=your_openai_api_key_here
 # GEMINI_API_KEY=your_gemini_api_key_here
