--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "form-data": "^4.0.5",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "openai": "^6.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
