chore: add admin bootstrap script

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,9 @@ OPENAI_API_KEY=your_openai_api_key_here
 # JWT Configuration (if needed)
 # JWT_SECRET=your_jwt_secret_here
 # JWT_EXPIRE=30d
+
+# Admin Bootstrap Configuration
+# Used by scripts/seedAdmin.js to create default admin user
+ADMIN_NAME=System Administrator
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=ChangeMe123
