--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "multer": "^2.0.2",
-    "openai": "^6.17.0"
+    "openai": "^6.17.0",
+    "socket.io": "^4.8.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
