chore: add socket debug logging
- Created socketDebugLogger with colorized console output

- Added event tracking and statistics collection

- Integrated logging into socket handlers and authorization

- Added admin API endpoints for debug stats and toggle

- Auto-enabled in development, manual toggle in production

- Tracks connections, events, errors, performance, rooms

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 PORT=3000
 NODE_ENV=development
 
+# Socket.IO Debug Logging
+# Enable detailed debug logging for socket events (auto-enabled in development)
+# DEBUG_SOCKET=true
+
 # Database Configuration
 MONGODB_URI=mongodb://localhost:27017/ai-craft-recognition
 
