--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "mongoose": "^9.1.5",
     "multer": "^2.0.2",
     "openai": "^6.17.0",
-    "socket.io": "^4.8.3"
+    "socket.io": "^4.8.3",
+    "winston": "^3.19.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
