--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,10 @@ OPENAI_API_KEY=your_openai_api_key_here
 # GEMINI_API_KEY=your_gemini_api_key_here
 
 # CORS Configuration
-# CORS_ORIGIN=http://localhost:5173
+# Single origin (backward compatibility)
+CORS_ORIGIN=http://localhost:5173
+# Multiple origins (comma-separated for production)
+# CORS_ORIGINS=https://yourdomain.com,https://www.yourdomain.com,https://app.yourdomain.com
 
 # JWT Configuration (if needed)
 # JWT_SECRET=your_jwt_secret_here
