--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "openai": "^6.17.0",
     "socket.io": "^4.8.3",
     "winston": "^3.19.0",
