--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,10 @@ MONGODB_URI=mongodb://localhost:27017/ai-craft-recognition
 
 # AI Service Configuration
 AI_SERVICE_URL=http://localhost:5001
+AI_TIMEOUT=15000
+# AI service timeout in milliseconds (default: 15000ms = 15 seconds)
+ENABLE_AI_FALLBACK=true
+# Enable fallback response when AI service is unavailable (default: true)
 
 # Speech-to-Text Configuration
 STT_PROVIDER=whisper
