feat: add retry logic for ai service calls
- Installed axios-retry for automatic retry mechanism
- Configurable retry attempts (AI_MAX_RETRIES, default 3)
- Exponential backoff strategy (AI_RETRY_DELAY, default 1000ms)
- Retries on network errors and 5xx server errors
- Does not retry on 4xx client errors
- Detailed retry logging with attempt numbers
- Retry count included in all responses
- Smart retry conditions: network errors, timeouts, server errors
- Prevents unnecessary retries for client errors
- Improves reliability when AI service is intermittently unavailable
- Works in conjunction with timeout and fallback mechanisms

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,10 @@ AI_TIMEOUT=15000
 # AI service timeout in milliseconds (default: 15000ms = 15 seconds)
 ENABLE_AI_FALLBACK=true
 # Enable fallback response when AI service is unavailable (default: true)
+AI_MAX_RETRIES=3
+# Maximum retry attempts for AI service calls (default: 3)
+AI_RETRY_DELAY=1000
+# Initial delay between retries in milliseconds with exponential backoff (default: 1000ms)
 
 # Speech-to-Text Configuration
 STT_PROVIDER=whisper
