--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.13.4",
+    "axios-retry": "^4.5.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
