--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.13.0",
     "socket.io-client": "^4.8.3"
   },
